Atualização de biblioteca e Exemplos
Atualizada biblioteca E1_SAT01.dll para versão 01.02.03, com organização dos arquivos criados em uma estrutura de pasta separada por ano mês e dia.

Atualizados exemplos Delphi e VB6 .

--- a/Exemplos/Exemplo_FrameworkSAT_VB6/e1_conf.ini
+++ b/Exemplos/Exemplo_FrameworkSAT_VB6/e1_conf.ini
@@ -1,4 +1,4 @@
 [configuracao_sat]
-caminho_biblioteca_sat=D:\\Documentos\\Arquivos\\0001-E1\\BIBLIOTECAS\\E1_SAT\\x86\\release\\Veraciti.dll
+caminho_biblioteca_sat=D:/Programas/satelgin 6.0.0/lib/dllsat.dll
 
 
